--- a/Lab07.vcxproj
+++ b/Lab07.vcxproj
@@ -149,11 +149,15 @@
   <ItemGroup>
     <ClInclude Include="ground.h" />
     <ClInclude Include="position.h" />
+    <ClInclude Include="projectile.h" />
     <ClInclude Include="test.h" />
     <ClInclude Include="testGround.h" />
     <ClInclude Include="testPosition.h" />
+    <ClInclude Include="testProjectile.h" />
+    <ClInclude Include="testVelocity.h" />
     <ClInclude Include="uiDraw.h" />
     <ClInclude Include="uiInteract.h" />
+    <ClInclude Include="velocity.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
